--- a/random_record/Blind-knowledge/interview/使用技术.md
+++ b/random_record/Blind-knowledge/interview/使用技术.md
@@ -35,3 +35,10 @@ age: 13415
 react 使用symble定义组件标识信息
 组件包含$$type、type、 props、ref 、 _owner
 通过执行React.createElement创建出的ReactElement类型的js对象，就是"React组件"
+
+## 技术难点
+1. 吸顶
+2. 节流和防抖
+3. 异步
+4. 错误处理
+5. 弹框滚动穿透和触红线bug
