--- a/random_record/Web-knowledge/前端框架/vue/分析.md
+++ b/random_record/Web-knowledge/前端框架/vue/分析.md
@@ -242,3 +242,17 @@ MessageBox.install = function (Vue, options) {
   Vue.prototype.$msgBox = {}
 };
 ```
+
+## vue.js自定义组件上使用v-model
+https://juejin.im/post/5afd95fa6fb9a07a9e4d72a8
+
+## vue中数据渲染不出来
+现象：data中的数据必须有改变，才会渲染对象configData
+
+对于对象赋值，一定要用set
+```
+if(data[i].itemKey === 'market_invite_text'){
+  // this.configData.market_invite_text = data[i].itemValue;
+  this.$set(this.configData,'market_invite_text', data[i].itemValue); //h5 邀请文案
+}
+```
