--- a/random_record/Work-record/saved-code/dedao/需求/2.7.1语文专区.md
+++ b/random_record/Work-record/saved-code/dedao/需求/2.7.1语文专区.md
@@ -96,3 +96,45 @@ https://cloud.tencent.com/developer/article/1059038 (JS 吸顶导航，告别“
     //     window.removeEventListener("scroll", this.handleScroll);
     //   }
     // },
+
+
+    http://127.0.0.1:8888/api/topic/config/type.json?index=2&code=4,null   （paramName为空，paramCode为'0'）
+
+    ```
+    import { env, compareVersion } from "../utils";
+import { jumpToLogin, getAppUserPid } from "../utils/app";
+
+export default {
+  data () {
+    return {
+      isNewVersion: true
+    }
+  },
+  methods: {
+    async checkVersionAndLogin(version) {
+      let isOldVersion = compareVersion(env.appVer, version) < 0; 
+      if (isOldVersion) {
+        this.$msgBox.showMsgBox({
+          hasAction: false
+        });
+        return;
+      }
+      let pid = await getAppUserPid();
+      if (!pid) {
+        jumpToLogin();
+      }
+      return pid
+    }
+  }
+};
+
+```
+
+    /**
+     * 如果进入页面，列表处于上面，请求一次
+     * 进入页面，监听是否执行了inputMessageHandler，执行过就执行requestCommentList，关键是不知道是mounted执行还是infiniteHandler执行？
+     */
+        // 先执行if，再执行监听滚动，进来执行一次，所以this.isScroll肯定是默认值
+    
+
+   
