--- a/random_record/要学习的技术任务/链接.md
+++ b/random_record/要学习的技术任务/链接.md
@@ -37,3 +37,5 @@ http://candy-chat.github.io/candy/  (candy-chat)
 https://www.sessionstack.com/  （SessionStack录制web交互操作视频，可以在视觉上重现最终用户在与Web应用程序交互时遇到问题时发生的一切）
 
 https://www.aliyun.com/ss//w  (阿里云)
+
+http://airbnb.io/lottie/#/ 以后动画都建议用这种，节省内存，少切图。
