add virtual list

--- a/random_record/Work-record/Daily-Record/dedao/周报.md
+++ b/random_record/Work-record/Daily-Record/dedao/周报.md
@@ -29,3 +29,17 @@ https://igetcool-share.igetcool.com/webdistributeh5/...
 - 分销系统h5提测
 - 添加财务分类，还在等接口
 
+## 2019 年 11 月 28 日
+- 实时销售，按渠道统计 上线
+- 渠道监控，账户余额，开发中
+
+- 神策，数据监控
+
+## 2019 年 12 月 05 日
+- 分销二期已经提测
+- 下午熟悉下打卡代码
+- 浮窗配置
+https://www.teambition.com/project/5d53fb0ac022c60018ca887d/plugin/5d79e2cd5ade2ed9aa3f81d4
+
+// content = "{\"startDate\":\"2019-11-17\",\"endDate\":\"2019-11-20\",\"awardDays\":1,\"title\":\"双11领取红包\",\"isAward\":1,\"awardDetail\":{\"type\":13,\"awards\":[\"357661501369143296\",\"176423533646319616\",\"262757372292956160\"]},\"awardDetails\":[{\"awardDays\":5,\"type\":13,\"awards\":[\"357661501369143296\",\"176423533646319616\",\"262757372292956160\"]},{\"awardDays\":20,\"type\":20,\"awards\":[\"388782620640186368\",\"375836986948767744\",\"375834783877980160\"]}]}"
+打卡阶梯天数必须要在活动时间之内，奖励最低天数等于最低打卡天数，
