--- a/random_record/Work-record/saved-code/dedao/需求/分销系统.md
+++ b/random_record/Work-record/saved-code/dedao/需求/分销系统.md
@@ -91,3 +91,25 @@ http://192.168.1.224:8900/distributor/product/distributor/id/list.json?distribut
 域名转发到后端服务的地址是没有market/api/的
 
 https://mirari.cc/v-viewer/  （预览图片）
+
+算一下还剩下多高，然后获取自己的高度，最后面再设置离按钮的高度
+
+0-100是一个奖励，
+分成不能超过订单的实际金额。
+只在app下的订单在
+
+  location.replace(URL)
+  this.$router.replace 代替   this.$router.push
+
+https://www.jianshu.com/p/7bf0b791060d
+
+fontmin  访达
+
+## 第二期
+分销后台添加：付款时间
+全部订单和订单列表都得添加吗？
+
+
+content-type: text/html; charset=utf-8  上传excel  失败
+
+content-type: application/json; charset=utf-8  上传图片  成功
