--- a/random_record/技术来源/常用链接保存.md
+++ b/random_record/技术来源/常用链接保存.md
@@ -81,3 +81,6 @@ https://farbelous.io/bootstrap-colorpicker/
 
 ## 终端命令
 https://ohmyz.sh/
+
+## fontmin  访达
+http://ecomfe.github.io/fontmin/en#banner
