--- a/random_record/Web-knowledge/js/专题技术/异步/错误处理.md
+++ b/random_record/Web-knowledge/js/专题技术/异步/错误处理.md
@@ -12,7 +12,7 @@ Promise.reject()
 - promise 中的错误处理
 - async 中的错误处理
 
-在promise 中处理错误,我们通常也是去try catch,但是 只能catch 到同步的错误,如果是异步的,比如我们settimeout一下其实是catch不到的。
+在promise 中处理错误,我们通常也是去try catch,但是 `只能catch 到同步的错误`,如果是异步的,比如我们settimeout一下其实是catch不到的。
 ```
 var promise = new Promise(function(resolve, reject){    
     setTimeout(function(){        
