--- a/random_record/Web-knowledge/js/基本语法区别、注意点/操作函数api/各种遍历.md
+++ b/random_record/Web-knowledge/js/基本语法区别、注意点/操作函数api/各种遍历.md
@@ -35,7 +35,36 @@ map遍历数组，不是对象
 
 map构造函数接受参数：数组 和 任何具有 Iterator 接口、且每个成员都是一个双元素的数组的数据结构
 
+map我不熟悉的特殊用法：
 
+```
+// 下面的语句返回什么呢:
+["1", "2", "3"].map(parseInt);
+// 你可能觉的会是[1, 2, 3]
+// 但实际的结果是 [1, NaN, NaN]
+
+// 通常使用parseInt时,只需要传递一个参数.
+// 但实际上,parseInt可以有两个参数.第二个参数是进制数.
+// 可以通过语句"alert(parseInt.length)===2"来验证.
+// map方法在调用callback函数时,会给它传递三个参数:当前正在遍历的元素, 元素索引, 原数组本身.
+// 第三个参数parseInt会忽视, 但第二个参数不会,也就是说,
+// parseInt把传过来的索引值当成进制数来使用.从而返回了NaN.
+
+function returnInt(element) {
+  return parseInt(element, 10);
+}
+
+['1', '2', '3'].map(returnInt); // [1, 2, 3]
+// 意料之中的结果
+
+// 也可以使用简单的箭头函数，结果同上
+['1', '2', '3'].map( str => parseInt(str) );
+
+// 一个更简单的方式:
+['1', '2', '3'].map(Number); // [1, 2, 3]
+// 与`parseInt` 不同，下面的结果会返回浮点数或指数:
+['1.1', '2.2e2', '3e300'].map(Number); // [1.1, 220, 3e+300]
+```
 ## 类似数组（可先转换为数组，再进行遍历）
 
 let divList = document.querySelectorAll('div');   //divList不是数组，而是nodeList
