--- a/random_record/Web-knowledge/js/基本语法区别、注意点/操作函数api/深浅拷贝.md
+++ b/random_record/Web-knowledge/js/基本语法区别、注意点/操作函数api/深浅拷贝.md
@@ -224,6 +224,36 @@ deepClone(obj, str);
 console.log(str.a);
 ```
 
+```
+function deepClone(obj) {
+    // 过滤一些特殊情况
+    if(obj === null) return null;
+    if(typeof obj !== "object") return obj;
+    if (typeof window !== 'undefined' && window.JSON) { // 浏览器环境下 并支持window.JSON 则使用 JSON
+        return JSON.parse(JSON.stringify(obj));
+    }
+    if(obj instanceof RegExp) { // 正则
+         return new RegExp(obj);
+    }
+    if(obj instanceof Date) { // 日期
+         return new Date(obj);
+    }
+    // let newObj = {}
+    // let newObj = new Object()
+    let newObj = new obj.constructor; // 不直接创建空对象的目的：克隆的结果和之前保持所属类  =》 即能克隆普通对象，又能克隆某个实例对象
+    for(let key in obj) {
+        if(obj.hasOwnProperty(key)) {
+             newObj[key] = deepClone(obj[key]);
+        }
+    }
+    // let newObj = obj.constructor === Array ? [] : {};
+    //for(let key in obj) {
+    //    newObj[key] = typeof obj[key] === 'object' ? deepCopy(obj[key]) : //obj[key];
+    //}
+    return newObj;
+}
+
+```
 ## 数组的深浅拷贝
 ### 1.浅拷贝：arr.slice()或arr.concat():
 浅拷贝，即到数组只有一维的时候,且每一项不是对象的话这样拷贝看起来和深拷贝效果一样
