--- a/random_record/Web-knowledge/js/专题技术/异步/错误处理.md
+++ b/random_record/Web-knowledge/js/专题技术/异步/错误处理.md
@@ -16,7 +16,7 @@ Promise.reject()
 ```
 var promise = new Promise(function(resolve, reject){    
     setTimeout(function(){        
-        throw new Error('test')    
+        throw new Error('test')     //异步的catch捕获不到，需要使用reject来抛错误
     }, 0)    
     resolve('ok'); //输出
 });
