--- a/random_record/Web-knowledge/js/基本语法区别、注意点/区别/区别.md
+++ b/random_record/Web-knowledge/js/基本语法区别、注意点/区别/区别.md
@@ -12,8 +12,55 @@ console.log(!null):true
 !'':true
 !'1':false
 Boolean(''):false
+
+Number(null)
+// 0
+
+5 + null
+// 5
+
+
+Number(undefined)
+// NaN
+
+5 + undefined
+// NaN
+
+null是一个表示"无"的对象，转为数值时为0；undefined是一个表示"无"的原始值，转为数值时为NaN。
 ```
 
+null表示"没有对象"，即该处不应该有值。典型用法是：
+
+（1） 作为函数的参数，表示该函数的参数不是对象。
+
+（2） 作为对象原型链的终点。
+
+```
+Object.getPrototypeOf(Object.prototype)
+// null
+```
+
+undefined表示"缺少值"，就是此处应该有一个值，但是还没有定义。典型用法是：
+（1）变量被声明了，但没有赋值时，就等于undefined。
+
+（2) 调用函数时，应该提供的参数没有提供，该参数等于undefined。
+
+（3）对象没有赋值的属性，该属性的值为undefined。
+
+（4）函数没有返回值时，默认返回undefined。
+```
+var i;
+i // undefined
+
+function f(x){console.log(x)}
+f() // undefined
+
+var  o = new Object();
+o.p // undefined
+
+var x = f();
+x // undefined
+```
 `使用var声明变量但未对其加以初始化，为undefined。`
 
 `对于未声明过的变量，只能使用typeof操作符检测其数据类型，会返回undefined，未初始化的变量使用typeof操作符检测其数据类型，也会返回undefined。`
@@ -227,3 +274,26 @@ window.location 改为 top.location　即可在顶部链接到指定页
 每个函数都有一个 length 属性 （函数名.length）， 表示期望接收的函数的个数（而不是实际接收的参数个数）
 
 它与 arguments 不同。 arguments.length 是表示函数实际接收的参数个数。
+
+
+## ajax/axios/fetch区别
+ajax
+
+- 不符合现在前端MVVM的浪潮
+- 基于原生的XHR开发，XHR本身的架构不清晰
+- jQuery整个项目太大，单纯使用ajax却要引入整个jQuery
+
+axios
+
+- 从 node.js 创建 http 请求
+- 支持 Promise API
+- 客户端支持防止CSRF
+- 提供了一些并发请求的接口
+
+fetch
+
+- 更加底层，提供的API丰富（request, response）
+- 脱离了XHR，是ES规范里新的实现方式
+- fetch只对网络请求报错，对400，500都当做成功的请求，需要封装去处理
+- fetch默认不会带cookie，需要添加配置项
+- fetch没有办法原生监测请求的进度，而XHR可以
