--- a/random_record/Web-knowledge/js/考点/常用代码段.md
+++ b/random_record/Web-knowledge/js/考点/常用代码段.md
@@ -74,12 +74,12 @@ window.addEventListener('scroll', debounce(myHandler.bind(this, 'haha'), 1000));
 ```js
 //时间戳法
 function throttle(fn, wait) {
-  let prev = Date.new();
+  let prev = Date.now();  //没发现js有这个函数
   return function() {
     const self = this;
     const args = arguments;
 
-    const now = Date.new();
+    const now = Date.now();
     if(now-prev >= wait) {
       fn.apply(self, args);
       prev = Date.now();
