--- a/random_record/Web-knowledge/js/考点/防抖和节流.md
+++ b/random_record/Web-knowledge/js/考点/防抖和节流.md
@@ -2,6 +2,8 @@
 <https://jinlong.github.io/2016/04/24/Debouncing-and-Throttling-Explained-Through-Examples/>
 
 <https://www.cnblogs.com/sysuhanyf/p/7514108.html>
+
+https://juejin.im/post/5e8b261ae51d4546c0382ab4#heading-6
 ## 一、防抖
 将多次计算合并为一次计算。
 
@@ -257,3 +259,20 @@ _throttle(()=>{
   },[], 16)
 );
 ```
+## 理解
+防抖，即短时间内大量触发同一事件，只会执行一次函数，实现原理为设置一个定时器，约定在xx毫秒后再触发事件处理，每次触发事件都会重新设置计时器，直到xx毫秒内无第二次操作，防抖常用于搜索框/滚动条的监听事件处理，如果不做防抖，每输入一个字/滚动屏幕，都会触发事件处理，造成性能浪费。
+
+
+`防抖是延迟执行，而节流是间隔执行`，函数节流即每隔一段时间就执行一次，实现原理为设置一个定时器，约定xx毫秒后执行事件，如果时间到了，那么执行函数并重置定时器，和防抖的区别在于，防抖每次触发事件都重置定时器，而节流在定时器到时间后再清空定时器
+
+对于重置和清空，我的理解：重置是时间从0开始，清空是定时器没了
+## 使用场景
+
+debounce
+- search搜索联想，用户在不断输入值时，用防抖来节约请求资源。
+- window触发resize的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
+- 监听滚动事件
+
+throttle
+- 鼠标不断点击触发，mousedown(单位时间内只触发一次)
+- 监听滚动事件的某些场景，比如是否滑到底部自动加载更多，用throttle来判断
