--- a/random_record/Web-knowledge/前端框架/vue/分析.md
+++ b/random_record/Web-knowledge/前端框架/vue/分析.md
@@ -256,3 +256,13 @@ if(data[i].itemKey === 'market_invite_text'){
   this.$set(this.configData,'market_invite_text', data[i].itemValue); //h5 邀请文案
 }
 ```
+
+
+## WEB 前后端分离三个最大的优点在于
+1：最大的好处就是前端JS可以做很大部分的数据处理工作，对服务器的压力减小到最小
+
+2：后台错误不会直接反映到前台，错误接秒较为友好
+
+3：由于后台是很难去探知前台页面的分布情况，而这又是JS的强项，而JS又是无法独立和服务器进行通讯的。所以单单用后台去控制整体页面，又或者只靠JS完成效果，都会难度加大，前后台各尽其职可以最大程度的减少开发难度。
+
+https://blog.csdn.net/ka_ka314/article/details/81203285
