--- a/random_record/Web-knowledge/前端框架/vue/基本语法/源码分析.md
+++ b/random_record/Web-knowledge/前端框架/vue/基本语法/源码分析.md
@@ -164,3 +164,174 @@ if (options.modules) {
         }
       }
 ```
+
+
+## 双向绑定
+主要实现以下四个：
+- 监听器Observer
+对data数据对象变得“可监测”，vue2.0用Object.defineProperty()来劫持各个数据属性的 setter / getter；
+
+get——收集订阅者watcher，dep.addSub(Dep.target)；
+set——通知订阅器dep，调用notify；
+```
+/**
+  * 循环遍历数据对象的每个属性
+  */
+function observable(obj) {
+    if (!obj || typeof obj !== 'object') {
+        return;
+    }
+    let keys = Object.keys(obj);
+    keys.forEach((key) => {
+        defineReactive(obj, key, obj[key])
+    })
+    return obj;
+}
+/**
+ * 将对象的属性用 Object.defineProperty() 进行设置
+ */
+function defineReactive(obj, key, val) {
+    Object.defineProperty(obj, key, {
+        get() {
+            console.log(`${key}属性被读取了...`);
+            return val;
+        },
+        set(newVal) {
+            console.log(`${key}属性被修改了...`);
+            val = newVal;
+        }
+    })
+}
+
+
+defineReactive: function(data, key, val) {
+	var dep = new Dep();
+	Object.defineProperty(data, key, {
+		enumerable: true,
+		configurable: true,
+		get: function getter () {
+			if (Dep.target) {
+				dep.addSub(Dep.target);
+			}
+			return val;
+		},
+		set: function setter (newVal) {
+			if (newVal === val) {
+				return;
+			}
+			val = newVal;
+			dep.notify();
+		}
+	});
+}
+
+```
+
+- 订阅器Dep
+通知订阅者watcher更新函数；
+```
+function Dep () {
+    this.subs = [];
+}
+Dep.prototype = {
+    addSub: function(sub) {
+        this.subs.push(sub);
+    },
+    notify: function() {
+        this.subs.forEach(function(sub) {
+            sub.update();
+        });
+    }
+};
+Dep.target = null;
+
+```
+
+- 订阅者Watcher（一个模板指令相对于一个watcher）
+触发监听器Observer里的get函数，将自己添加到订阅器Dep中；
+包含update属性值的函数；
+更新View界面；
+
+```
+function Watcher(vm, exp, cb) {
+    this.vm = vm;
+    this.exp = exp;
+    this.cb = cb;
+    this.value = this.get();  // 将自己添加到订阅器的操作
+}
+
+Watcher.prototype = {
+    update: function() {
+        this.run();
+    },
+    run: function() {
+        var value = this.vm.data[this.exp];
+        var oldVal = this.value;
+        if (value !== oldVal) {
+            this.value = value;
+            this.cb.call(this.vm, value, oldVal);
+        }
+    },
+    get: function() {
+        Dep.target = this; // 全局变量 订阅者 赋值
+        var value = this.vm.data[this.exp]  // 强制执行监听器里的get函数
+        Dep.target = null; // 全局变量 订阅者 释放
+        return value;
+    }
+};
+
+```
+
+- 编译者Compile
+初始化订阅者Watcher；
+解析模板指令，并替换模板数据，初始化视图；
+将模板指令对应的节点绑定对应的更新函数，初始化相应的订阅者Watcher；
+
+传入模板指令对应节点，初始化相应的订阅者Watcher，触发订阅者Watcher中的更新函数
+```
+对 '{{变量}}' 这种形式的指令处理的关键代码进行分析
+compileText: function(node, exp) {
+	var self = this;
+	var initText = this.vm[exp]; // 获取属性值
+	this.updateText(node, initText); // dom 更新节点文本值
+    // 将这个指令初始化为一个订阅者，后续 exp 改变时，就会触发这个更新回调，从而更新视图
+	new Watcher(this.vm, exp, function (value) { 
+		self.updateText(node, value);
+	});
+}
+
+```
+- 监听器 Observer ，用来劫持并监听所有属性（转变成setter/getter形式），如果属性发生变化，就通知订阅者
+- 订阅器 Dep，用来收集订阅者，对监听器 Observer 和 订阅者 Watcher 进行统一管理
+- 订阅者 Watcher，可以收到属性的变化通知并执行相应的方法，从而更新视图
+- 解析器 Compile，可以解析每个节点的相关指令，对模板数据和订阅器进行初始化
+
+自己口头描述：双向绑定主要需要实现observer、dep、watcher、compile，他们分别的功能是。。。
+首先要定义observer，对data中属性的setter / getter进行拦截，compile解析模板中指令，替换模板数据，初始化视图，初始化订阅者；watcher相当于每个指令，触发getter，添加到dep中；dep收集watcher，当收到属性变化通知时，通知更新函数。（我觉得赋值是在代码中赋值，就能监听到set）
+
+## 源码加强分析
+注意：每个data对象的属性的 getter 都持有一个 dep；源码中收集watcher会有判断保证同一数据不会被添加多次
+```
+addDep (dep: Dep) {
+  const id = dep.id
+  if (!this.newDepIds.has(id)) {
+    this.newDepIds.add(id)
+    this.newDeps.push(dep)
+    if (!this.depIds.has(id)) {
+      dep.addSub(this)
+    }
+  }
+}
+
+```
+这时候会做一些逻辑判断（保证同一数据不会被添加多次）后执行 dep.addSub(this)，那么就会执行 this.subs.push(sub)，也就是说把当前的 watcher 订阅到这个数据持有的 dep 的 subs 中，这个`目的是为后续数据变化时候能通知到哪些 subs 做准备`。所以在 vm._render() 过程中，会触发所有数据的 getter，这样实际上已经完成了一个依赖收集的过程。
+
+
+
+## vue2.0怎么对数组和对象拦截
+数组：observe 方法
+对象：遍历对象的key调用 defineReactive 方法，
+
+defineReactive 的功能就是定义一个响应式对象，给对象动态添加 getter 和 setter，递归调用observe 方法，这样就保证了无论 obj 的结构多复杂，它的所有子属性也能变成响应式的对象，这样我们访问或修改 obj 中一个嵌套较深的属性，也能触发 getter 和 setter。
+
+
