--- a/random_record/安装或者配置方法/安装知识/相关安装指导.md
+++ b/random_record/安装或者配置方法/安装知识/相关安装指导.md
@@ -1,6 +1,22 @@
 hanniehhy@163.com 5y name = sunshinehhy
 hhy1770547592@163.com 9k name = sunhannie
 
+## git配置总结
+- 本地上的同一项目上传到不同git（git服务不相同，也就是git域名不相同）
+注意点：
+1. git服务上，配置不同的ssh
+2. 在项目的git/config中加上不同git服务下的url，这样就能在多git下看到git操作记录
+```
+[remote "origin"]
+	url = git@gitlab.luojilab.com:igetcool/front-end/class-manage.git
+	url = git@gitlab.igetcool.com:front-end/class-manages.git
+	fetch = +refs/heads/*:refs/remotes/origin/*
+```
+- 同一电脑的不同项目上传到不同git账户（git服务相同，也就是git域名相同）
+注意点：
+1. git服务上，配置不同的ssh
+2. 在ssh/config中加上不同账号，具体操作参考一下
+
 ## git 和电脑怎么连接
 
 http://blog.csdn.net/life_is_crazy/article/details/70576863
