--- a/random_record/Web-knowledge/js/基本语法区别、注意点/操作函数api/深浅拷贝.md
+++ b/random_record/Web-knowledge/js/基本语法区别、注意点/操作函数api/深浅拷贝.md
@@ -229,9 +229,6 @@ function deepClone(obj) {
     // 过滤一些特殊情况
     if(obj === null) return null;
     if(typeof obj !== "object") return obj;
-    if (typeof window !== 'undefined' && window.JSON) { // 浏览器环境下 并支持window.JSON 则使用 JSON
-        return JSON.parse(JSON.stringify(obj));
-    }
     if(obj instanceof RegExp) { // 正则
          return new RegExp(obj);
     }
@@ -248,7 +245,7 @@ function deepClone(obj) {
     }
     // let newObj = obj.constructor === Array ? [] : {};
     //for(let key in obj) {
-    //    newObj[key] = typeof obj[key] === 'object' ? deepCopy(obj[key]) : //obj[key];
+    //    newObj[key] = Object.prototype.toString.apply(obj[key])  === '[object Object]' ? deepCopy(obj[key]) : //obj[key];
     //}
     return newObj;
 }
